Trying to fix vertical scroll on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,9 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
+    /* height: 100%; */
+    min-height: -webkit-fill-available;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -921,7 +923,7 @@ body.credits-page .btn-back:hover {
     #ready-button {
         font-size: 1.7em;
         padding: 8px 50px;
-        margin-bottom: 1em;
+        margin-bottom: 2em;
     }
 
     .dialog {
@@ -998,6 +1000,10 @@ body.credits-page .btn-back:hover {
 }
 
 @media (max-width: 440px) {
+
+    header img {
+        animation: zoom-in 1.5s ease-out;
+    }
 
     #logo-white {
         display: none;
